<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/add_subscription"
        android:id="@+id/new_note"
        android:icon="@drawable/new_sub"
        android:contentDescription="@string/add_a_new_subscription"
        android:iconTint="@color/colorAccent"
        app:showAsAction="always"/>

    <item
        android:title="@string/settings"
        android:id="@+id/settings_btn"
        app:showAsAction="never"
        android:orderInCategory="200"
        android:contentDescription="@string/settings"/>

    <item
        android:title="@string/my_expenses"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:contentDescription="@string/my_total_expenses"
        android:id="@+id/total_exp_btn"/>
</menu>